updated legal docs

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,11 +1,12 @@
 ---
-title: "Overview"
+title: "Introduction"
 description: "Introducing maxBTC, the first liquid, scalable BTC-denominated yield asset"
+icon: "house"
 ---
 
-# Introduction
-
 Structured is shaping a new standard for Bitcoin yield, turning BTC from a static store of value into a liquid asset that generates sustainable returns and unlocks broader financial utility. maxBTC represents a transparent and composable yield format for Bitcoin, designed to preserve BTC exposure while expanding its role in DeFi.
+
+---
 
 ## **Mission**
 
@@ -14,6 +15,8 @@ Structured is shaping a new standard for Bitcoin yield, turning BTC from a stati
 ## **Vision**
 
 **Structured envisions Bitcoin evolving from a store of value into a trusted asset that powers an open and scalable financial system.** Real BTC yield enables builders and investors to expand what Bitcoin can do, creating growth that is sustainable and built for the long term.
+
+---
 
 # **Introducing maxBTC**
 
