--- a/overview/points.mdx
+++ b/overview/points.mdx
@@ -44,5 +44,5 @@ All points and rankings are visible to participants. A leaderboard highlights to
 
 Multipliers vary by strategy and integration. For example, using maxBTC as collateral, providing liquidity in Supervaults, or holding specific LP tokens can earn higher points.
 <Note>
-*Track your points and ranking at [points.structured.money](https://points.structured.money/)*
+*Track your points and ranking at [points.structured.money]()*
 </Note>
