updated points page reference

--- a/strategy/faq.mdx
+++ b/strategy/faq.mdx
@@ -104,12 +104,14 @@ icon: "circle-question"
 <AccordionGroup>
   <Accordion title="What are Structured Points?">
     Structured Points recognize early participation. Points track activity across vaults and integrations and are updated weekly on a leaderboard.
+    
+    Learn more: [structured.money/points](https://structured.money/points)
   </Accordion>
 
   <Accordion title="How are points earned?">
     Points are distributed weekly based on holdings and activity. They can be earned by depositing into vaults, providing liquidity, or using maxBTC in supported integrations.
     
-    Learn more: [points.structured.money](https://points.structured.money/)
+    Learn more: [structured.money/points](https://structured.money/points)
   </Accordion>
 
   <Accordion title="What safeguards prevent abuse?">
@@ -123,7 +125,7 @@ icon: "circle-question"
   </Accordion>
 
   <Accordion title="Where can I see my boosters, multipliers, and rank?">
-    See current multipliers, your points and ranking at [points.structured.money](https://points.structured.money/)
+    See current multipliers, your points and ranking at [structured.money/points](https://structured.money/points)
   </Accordion>
 </AccordionGroup>
 
@@ -152,7 +154,7 @@ icon: "circle-question"
     - **Minting Vault:** Straightforward exposure to maxBTC. Deposits queue until the cap is reached (or end of September), then are deployed into the JLP BTC Neutral strategy.
     - **Liquidity Vault:** Converts deposits into maxBTC and allocates them to the maxBTC/WBTC Supervault on Neutron's orderbook DEX. Depositors earn both strategy yield and market-making fees.
     
-    Learn more: [maxBTC Vaults on Neutron](https://medium.com/@Structured/maxbtc-vaults-on-neutron-b4e6bcd17c57)
+    Learn more: [maxBTC Vaults on Neutron](https://medium.com/@Structured/maxbtc-vaults-on-neutron-b4e6bcd17c57) or visit [structured.money/vaults](https://structured.money/vaults)
   </Accordion>
 
   <Accordion title="Which assets can I deposit and how?">
