updated kyc faq

--- a/strategy/faq.mdx
+++ b/strategy/faq.mdx
@@ -205,13 +205,13 @@ icon: "circle-question"
     2. Connect your Ethereum wallet.
     3. Enter the amount you want to deposit and click **Submit KYC**.
     
-    Verification is handled directly by **zkMe** on your phone in three simple steps:
+    KYC is handled through zkMe directly. The process takes just a few minutes:
     
-    1. **Pick from a list of credentials** – choose the type of ID you want to use (e.g. passport, driver's license, national ID).
-    2. **Generate a zero-knowledge proof** – zkMe processes your ID locally on your device and packages it into a proof to preserve privacy.
-    3. **Wait for your Soulbound Token to be minted** – this links your verification to your wallet. You can leave the page while this completes; you'll be notified once it's done.
+    1. Pick a valid credential (passport, driver's license, national ID).
+    2. Complete verification through zkMe's interface.
+    3. Wait for approval and sign the transaction when prompted.
     
-    Once the process is complete, the vault interface will display **KYC passed**, and you can proceed with your deposit.
+    Once approved, your wallet will show as KYC-verified in the vault interface, and you can proceed with your deposit.
     
     For more information, see zkMe's FAQ: https://www.zk.me/faq-list
   </Accordion>
