update faq and tiers

--- a/overview/points.mdx
+++ b/overview/points.mdx
@@ -30,15 +30,7 @@ To ensure fairness for all participants:
 - Referral rewards are structured to benefit the referred user directly.
 - All mechanics are applied consistently across users.
 
-## Tiers
-
-As activity grows, points accumulate into tiers. These tiers reflect long-term engagement and create progression for participants. The structure will expand over time, with initial levels already live:
-
-| **Stone** | **Copper** | **Future tiers**  |
-| --- | --- | --- |
-| Entry tier for users who deposit, no boost multiplier. | After two months of deposited activity, applies a 1.1× boost multiplier. | Additional tiers will follow as the program expands. |
-
-All points and rankings are visible to participants. A leaderboard highlights top contributors, while individual dashboards track balances and tier status.
+The Points Program is designed to expand over time, a tier system may be introduced in later phases to recognize sustained engagement.
 
 ## **Multipliers**
 
