--- a/strategy/faq.mdx
+++ b/strategy/faq.mdx
@@ -118,11 +118,6 @@ icon: "circle-question"
     Thresholds prevent balance-splitting, referral rewards benefit the referred user directly, and mechanics are applied consistently across all participants.
   </Accordion>
 
-  <Accordion title="What are the tiers?">
-    - **Stone**: Entry tier, no multiplier.
-    - **Copper**: After two months of activity, 1.1× boost.
-    - **Future tiers**: More levels will be added as the program expands.
-  </Accordion>
 
   <Accordion title="Where can I see my boosters, multipliers, and rank?">
     See current multipliers, your points and ranking at [structured.money/points](https://structured.money/points)
@@ -217,7 +212,35 @@ icon: "circle-question"
   </Accordion>
 
   <Accordion title="Why didn't I pass the KYC?">
-    If your KYC with zkMe is not approved, you'll see the reason instantly (for example, expired ID, unclear photo, or mismatched details). For more information, see zkMe's FAQ: https://www.zk.me/faq-list
+    If your KYC is not approved, you'll see the reason instantly. Common reasons include expired ID, unclear photo, mismatched details, or being a resident/national of a restricted country. For more information, see zkMe's FAQ: https://www.zk.me/faq-list
+  </Accordion>
+
+  <Accordion title="Which countries are restricted from completing KYC?">
+    KYC verification is not available for users who are residents or nationals of the following countries, due to regulatory restrictions:
+    
+    Algeria
+    Bangladesh
+    Bolivia
+    China (Mainland)
+    Colombia
+    Cuba
+    Egypt
+    Ghana
+    India
+    Indonesia
+    Iran
+    Iraq
+    North Korea
+    Mexico
+    Nepal
+    North Macedonia
+    Russia
+    Sudan
+    Syria
+    Turkey
+    Vietnam
+    
+    This list may be updated in line with applicable regulations.
   </Accordion>
 
   <Accordion title="If my KYC got rejected, can I try again?">
