--- a/strategy/faq.mdx
+++ b/strategy/faq.mdx
@@ -132,35 +132,30 @@ icon: "circle-question"
   </Accordion>
 
   <Accordion title="What is the partnership between Structured and Neutron?">
-    Structured is opening up access to maxBTC together with Neutron as part of Phase 1 of the Bitcoin Summer campaign. This phase introduces two dedicated vaults that allow participants to mint maxBTC, establish its first trading liquidity on-chain, and prepare it for advanced use cases ahead of the full protocol launch.
+    Structured is opening up access to maxBTC together with Neutron as part of Phase 1 of the Bitcoin Summer campaign. This phase introduces a dedicated vault that allow participants to mint maxBTC and earn BTC-denominated yield ahead of the full protocol launch.
   </Accordion>
 
   <Accordion title="What is Bitcoin Summer?">
-    Bitcoin Summer is a multi-phase campaign that enables BTC holders to earn real BTC yield. Neutron has partnered with several projects to realize this vision, and Structured is participating in Phase 1 with the launch of two maxBTC vaults.
+    Bitcoin Summer is a multi-phase campaign that enables BTC holders to earn real BTC yield. Neutron has partnered with several projects to realize this vision, and Structured is participating in Phase 1 with the launch of a maxBTC vault.
     
     Participants can deposit into a Bitcoin Summer vault or eligible position on Neutron to earn BTC-denominated yield along with additional rewards.
     
     Learn more about [Bitcoin Summer](https://docs.neutron.org/btc-summer/overview) and the [**Bitcoin Summer rewards system**](https://x.com/neutron_org/status/1965835922638774395).
   </Accordion>
 
-  <Accordion title="What are the maxBTC Minting and Liquidity Vaults?">
-    Two maxBTC vaults are open for deposits on Neutron. Each vault accepts **WBTC**, wrapped Bitcoin on Ethereum, which connects directly to Structured's minting contracts. Deposits in both vaults are capped at **500 BTC**, with deployment to maxBTC's underlying strategy ([JLP BTC Neutral](/strategy/overview)) triggered once the cap is reached.
-    
-    - **Minting Vault:** Straightforward exposure to maxBTC. Deposits queue until the cap is reached (or end of September), then are deployed into the JLP BTC Neutral strategy.
-    - **Liquidity Vault:** Converts deposits into maxBTC and allocates them to the maxBTC/WBTC Supervault on Neutron's orderbook DEX. Depositors earn both strategy yield and market-making fees.
+  <Accordion title="What is the maxBTC Minting Vault?">
+    The maxBTC Minting Vault is open for deposits on Neutron. The vault accepts **WBTC**, wrapped Bitcoin on Ethereum, which connects directly to Structured's minting contracts. Deposits are capped at **500 BTC**, with deployment to maxBTC's underlying strategy ([JLP BTC Neutral](/strategy/overview)) triggered once the cap is reached.
     
     Learn more: [maxBTC Vaults on Neutron](https://medium.com/@Structured/maxbtc-vaults-on-neutron-b4e6bcd17c57) or visit [structured.money/vaults](https://structured.money/vaults)
   </Accordion>
 
   <Accordion title="Which assets can I deposit and how?">
-    Deposits into the current vaults are made in **WBTC** from Ethereum, using Metamask or any other EVM wallet, directly via [app.neutron.org/bitcoin-summer](http://app.neutron.org/bitcoin-summer).
+    Deposits into the vault are made in **WBTC** from Ethereum, using Metamask or any other EVM wallet, directly via [app.neutron.org/bitcoin-summer](http://app.neutron.org/bitcoin-summer).
     
-    Alternatively, Neutron users can access the vaults natively with a Neutron wallet by navigating to the Positions tab.
+    Alternatively, Neutron users can access the vault natively with a Neutron wallet by navigating to the Positions tab.
   </Accordion>
 
-  <Accordion title="How can I participate in the vaults?">
-    **Minting Vault**
-    
+  <Accordion title="How can I participate in the vault?">
     1. Go to [structured.money/vaults](https://structured.money/vaults) and select the **maxBTC Minting Vault**
     2. Connect an Ethereum wallet
     3. Follow the steps to complete KYC via third-party provider zkMe
@@ -168,20 +163,11 @@ icon: "circle-question"
     5. Deposits queue until the 500 BTC cap is hit
     6. At fund deployment depositors earn sustainable real BTC yield via maxBTC
     
-    **Liquidity Vault**
-    
-    1. Go to structured.money/vaults and select the maxBTC Liquidity Vault
-    2. Connect an Ethereum wallet
-    3. Follow the steps to complete KYC via third-party provider zkMe
-    4. Deposit **WBTC** **on Ethereum** into the maxBTC Liquidity Vault
-    5. Deposits queue until the 500 BTC cap is hit
-    6. At fund deployment depositors earn sustainable real BTC yield via maxBTC and Supervault market-making fees
-    
-    The maxBTC Minting Vault and Liquidity Vault are also accessible directly via [app.neutron.org/bitcoin-summer](http://app.neutron.org/bitcoin-summer)
+    The maxBTC Minting Vault is also accessible directly via [app.neutron.org/bitcoin-summer](http://app.neutron.org/bitcoin-summer)
   </Accordion>
 
   <Accordion title="Is KYC required to participate?">
-    While maxBTC is non-custodial DeFi, Structured is a centralized entity and complies with applicable AML laws and regulations. All participants must complete KYC to participate in this phase and access the vaults.
+    While maxBTC is non-custodial DeFi, Structured is a centralized entity and complies with applicable AML laws and regulations. All participants must complete KYC to participate in this phase and access the vault.
     
     - **Individuals:** Onboard via zkMe by submitting ID and proof of address.
     - **Entities:** [Contact the Structured team](https://t.me/Structured_Contact) directly for manual verification.
@@ -252,7 +238,7 @@ icon: "circle-question"
   </Accordion>
 
   <Accordion title="What is the minimum deposit?">
-    Both vaults require a minimum of 0.0001 WBTC.
+    The maxBTC Minting Vault require a minimum of 0.0001 WBTC.
   </Accordion>
 
   <Accordion title="How do withdrawals work?">
