faq updates and howmaxbtcworks infographic update

--- a/strategy/faq.mdx
+++ b/strategy/faq.mdx
@@ -124,50 +124,11 @@ icon: "circle-question"
   </Accordion>
 </AccordionGroup>
 
-## maxBTC vaults on Neutron
+## KYC and onboarding
 
 <AccordionGroup>
-  <Accordion title="What is Neutron?">
-    [Neutron](https://www.neutron.org/) is a public PoS blockchain that enables BTC holders to earn sustainable yield through an expanding suite of products and services. Yield opportunities on Neutron are enabled by Neutron's built-in infrastructure, which includes its high-frequency oracle, cron module, on-chain orderbook, and more.
-  </Accordion>
-
-  <Accordion title="What is the partnership between Structured and Neutron?">
-    Structured is opening up access to maxBTC together with Neutron as part of Phase 1 of the Bitcoin Summer campaign. This phase introduces a dedicated vault that allow participants to mint maxBTC and earn BTC-denominated yield ahead of the full protocol launch.
-  </Accordion>
-
-  <Accordion title="What is Bitcoin Summer?">
-    Bitcoin Summer is a multi-phase campaign that enables BTC holders to earn real BTC yield. Neutron has partnered with several projects to realize this vision, and Structured is participating in Phase 1 with the launch of a maxBTC vault.
-    
-    Participants can deposit into a Bitcoin Summer vault or eligible position on Neutron to earn BTC-denominated yield along with additional rewards.
-    
-    Learn more about [Bitcoin Summer](https://docs.neutron.org/btc-summer/overview) and the [**Bitcoin Summer rewards system**](https://x.com/neutron_org/status/1965835922638774395).
-  </Accordion>
-
-  <Accordion title="What is the maxBTC Minting Vault?">
-    The maxBTC Minting Vault is open for deposits on Neutron. The vault accepts **WBTC**, wrapped Bitcoin on Ethereum, which connects directly to Structured's minting contracts. Deposits are capped at **500 BTC**, with deployment to maxBTC's underlying strategy ([JLP BTC Neutral](/strategy/overview)) triggered once the cap is reached.
-    
-    Learn more: [maxBTC Vaults on Neutron](https://medium.com/@Structured/maxbtc-vaults-on-neutron-b4e6bcd17c57) or visit [structured.money/vaults](https://structured.money/vaults)
-  </Accordion>
-
-  <Accordion title="Which assets can I deposit and how?">
-    Deposits into the vault are made in **WBTC** from Ethereum, using Metamask or any other EVM wallet, directly via [app.neutron.org/bitcoin-summer](http://app.neutron.org/bitcoin-summer).
-    
-    Alternatively, Neutron users can access the vault natively with a Neutron wallet by navigating to the Positions tab.
-  </Accordion>
-
-  <Accordion title="How can I participate in the vault?">
-    1. Go to [structured.money/vaults](https://structured.money/vaults) and select the **maxBTC Minting Vault**
-    2. Connect an Ethereum wallet
-    3. Follow the steps to complete KYC via third-party provider zkMe
-    4. Deposit WBTC from Ethereum into the maxBTC Minting Vault
-    5. Deposits queue until the 500 BTC cap is hit
-    6. At fund deployment depositors earn sustainable real BTC yield via maxBTC
-    
-    The maxBTC Minting Vault is also accessible directly via [app.neutron.org/bitcoin-summer](http://app.neutron.org/bitcoin-summer)
-  </Accordion>
-
   <Accordion title="Is KYC required to participate?">
-    While maxBTC is non-custodial DeFi, Structured is a centralized entity and complies with applicable AML laws and regulations. All participants must complete KYC to participate in this phase and access the vault.
+    Structured is a centralized entity and complies with applicable AML laws and regulations. All participants must complete KYC to participate in this phase and access the vault.
     
     - **Individuals:** Onboard via zkMe by submitting ID and proof of address.
     - **Entities:** [Contact the Structured team](https://t.me/Structured_Contact) directly for manual verification.
@@ -238,7 +199,7 @@ icon: "circle-question"
   </Accordion>
 
   <Accordion title="What is the minimum deposit?">
-    The maxBTC Minting Vault require a minimum of 0.0001 WBTC.
+    A minimum of 0.0001 WBTC is required to mint maxBTC.
   </Accordion>
 
   <Accordion title="How do withdrawals work?">
